# GhostAuction

./: .gitignore  README.md  check_sigs.ts  check_supply.ts  check_tx.ts  fix_mint.ts  next.config.ts  package-lock.json  package.json  test_crypto.ts  test_crypto2.ts  test_fetch.ts  test_fetch_id.ts  test_mint_check.ts  test_pinata.ts  test_umi_mint.ts
anchor/: Anchor.toml  Cargo.toml
anchor/programs/ghost_auction/: Cargo.toml
anchor/programs/ghost_auction/src/: lib.rs
anchor/tests/: ghost_auction.ts
database/: schema.sql
scripts/: deploy.sh  setup.sh
src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
src/app/api/auctions/: route.ts
src/app/api/nft/[mint]/: route.ts
src/app/api/nfts/: route.ts
src/app/api/upload/: route.ts
src/app/api/upload-json/: route.ts
src/app/auction/[id]/: page.tsx
src/app/create/: page.tsx
src/app/dashboard/: page.tsx
src/app/explore/: page.tsx
src/app/mint/: page.tsx
src/app/profile/: page.tsx
src/app/settings/: page.tsx
src/components/auction/: AuctionCard.tsx  NFTGallery.tsx
src/components/layout/: DevnetBanner.tsx  Navbar.tsx
src/components/ui/: CountdownTimer.tsx
src/lib/: constants.ts  solana.ts  stores.ts  utils.ts
src/lib/idl/: ghost_auction.json  ghost_auction.ts
