[package]
name = "ghost-auction"
version = "0.1.0"
description = "GhostAuction - Privacy-first sealed bid NFT auctions on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ghost_auction"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = { version = "0.31.1", features = ["token"] }
ephemeral-rollups-sdk = { version = "0.13.0", features = ["anchor"] }
